- Initial commit of website.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default
+title: About
+about: active
+resume: passive
+projects: passive
+contact: passive
+description: Stephen Bahr is a Software Engineer from a small town in Ashland, OH
+---
+<!-- <div class="jumbotron"> -->
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Stephen Bahr" src="img/stephen_200x.png">
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<p class="lead">Hi, I'm <span itemprop="name">Stephen</span> and I am a Software Engineer</p>
+	<p>I mainly specialize in backend computational systems, but have a obsession to create interesting games. My passion involves always being able to improve my technical capabilities, and absorb learning experiences from others. 
+	</p>
+	
+	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>.
+	</p>
+	</div>
+	<style type="text/css">
+   		body { background: #212121 grey darken-4 !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+	</style>
+</div>
+<!-- </div> -->
