- Updates pdf resume.

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,13 +8,9 @@ contact: passive
 description: Current Resume for Stephen Bahr
 ---
 <div class="cv">
-	<a href="/files/StephenBResume.pdf" class="btn btn-default pull-right" title="Download as PDF">Download</a>
+	<a href="/files/StephenResumeWebsite.pdf" class="btn btn-default pull-right" title="Download as PDF">Download</a>
 		<div itemscope itemtype="http://data-vocabulary.org/Person">
 		<span itemprop="name"><h1>Stephen Bahr</h1></span>
-		<address>
-		1003 Cleveland Avenue<br>
-		Ashland OH 44805<br>
-		<abbr title="phone">P:</abbr> (567) 203-8462<br>
 		<span class="obfuscate">moc.liamg@rhabrnehpets</span>
 		</address>
 		</div>
