- Fixes typos in Resume/Index.html

--- a/resume/index.html
+++ b/resume/index.html
@@ -21,8 +21,8 @@ description: Current Resume for Stephen Bahr
 		<ul>
 		<li>Introduced Agile Development, increasing engineering production by 50%, which aligned content release schedules with sprints.</li>
 		<li>Implemented dynamic queueing systems for products that have variable audience sizes.</li>
-		<li>Created a Python imaging system, to manage server shards with custom load/unload handlings.</li>
-		<li>Engineered a time management/tracker, which allowed engineers to observe their JIRA progress and GitHub contributions daily.</li>
+		<li>Created a Python imaging system to manage server shards with custom load/unload handlings.</li>
+		<li>Engineered a time management/tracker, allowing engineers to observe their JIRA progress and GitHub contributions daily.</li>
 		</ul>
 
 		<p><strong>Terminal Systems Administrator, Boston University</strong><br>
