- Adds projects page. - Adds images for projects page. - Edits main about page to mention projects page.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ description: Stephen Bahr is a Software Engineer from a small town in Ashland, O
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Stephen Bahr" src="img/stephen_200x.png">
+	<img  class="img-rounded avatar" alt="Stephen Bahr" src="img/stephen_200x.png">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Stephen</span> and I am a Software Engineer</p>
 	<p>I mainly specialize in backend computational systems, but have a obsession to create interesting games. My passion involves always being able to improve my technical capabilities, and absorb learning experiences from others. 
 	</p>
 	
-	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>.
+	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>, or if you like visual portfolios you can check out my <a href="/projects">projects page</a>.
 	</p>
 	</div>
 	<style type="text/css">
