- Updates index.html.

--- a/ /index.html
+++ b/ /index.html
@@ -16,10 +16,31 @@ description: Current Resume for Stephen Bahr
 		</div>
 		
 		<h2>Experience</h2>
-		<p><strong>Software Engineer / Project Lead, Isles Softworks</strong><br>
-		<weak>June 2015 - Present</weak><br></p>
+		<p><strong>Game Developer, Pink Array</strong><br>
+		<weak>Jan 2018 - Present</weak><br>
+		<weak>Grashers, 2D platformer inspired by Binding of Issac/Legend of Zelda</weak>
+		</p>
 		<ul>
-		<li>Introduced Agile Development, increasing engineering production by 50%, which aligned content release schedules with sprints.</li>
+		<li>Introduced new AI threats into the game, using finite-state machines.</li>
+		<li>Developed collectable items and their condition/effects.</li>
+		<li>Designed new dungeons/levels through the in-house level editor.</li>
+		</ul>
+
+		<p><strong>Software Engineer, Grand Theft Minecart</strong><br>
+		<weak>Sept 2017 - Present</weak><br>
+		<weak>F2P Saas PC game server with over 800,000 accounts.</weak>
+		</p>
+		<ul>
+		<li>Optimized backend systems to store minimal data, increasing query times, resulting in less lag per tick.</li>
+		<li>Developed isolated custom event framework, allowing for different types of experiences per agile cycle.</li>
+		<li>Introduced statistical framework for tracking user behaviors, currencies, and actions to understand how players can player and/or exploit the game.</li>
+		</ul>
+
+		<p><strong>Software Engineer / Project Lead, Isles Softworks</strong><br>
+		<weak>June 2015 - Sept 2017</weak><br></p>
+		<ul>
+		<li>Lead multiple SaaS development teams through sprint life cycles, aligning content release schedules to bi-monthly.</li>
+		<li>Responsible for patching live services with up to 2,200 CCU and over 400,000 accounts.</li>
 		<li>Implemented dynamic queueing systems for products that have variable audience sizes.</li>
 		<li>Created a Python imaging system to manage server shards with custom load/unload handlings.</li>
 		<li>Engineered a time management/tracker, allowing engineers to observe their JIRA progress and GitHub contributions daily.</li>
@@ -33,9 +54,11 @@ description: Current Resume for Stephen Bahr
 		</ul>
 
 		<p><strong>Software Engineer / Project Lead, Core Network</strong><br>
-		<weak>Dec 2012 - Oct 2014</weak><br></p>
+		<weak>Dec 2012 - Oct 2014</weak><br>
+		<weak>F2P SaaS PC game server.</weak><br>
+		</p>
 		<ul>
-		<li>Designed scalable network structure to handle 2,000+ concurrent players.</li>
+		<li>Designed scalable network structure to handle up to 2,000 CCU.</li>
 		<li>Created SQL structures to manage over 200,000 accounts, and proposed switch to TokuDB engines increasing read times by 4x.</li>
 		<li>Constructed abstract framework system to increase turnover rates of "game updates".</li>
 		</ul>
