- Updates resume description on website.

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,24 +16,25 @@ description: Current Resume for Stephen Bahr
 		</div>
 		
 		<h2>Experience</h2>
-		<p><strong>Game Developer, Pink Array</strong><br>
-		<weak>Jan 2018 - Present</weak><br>
-		<weak>Grashers, 2D platformer inspired by Binding of Issac/Legend of Zelda</weak>
+		<p><strong>Lead Software Engineer, God Complex / Hylist Games</strong><br>
+		<weak>Jan 2019 - Present</weak><br>
+		<weak>Multiple F2P SaaS PC game server with over 1.2 million accounts</weak>
 		</p>
 		<ul>
-		<li>Introduced new AI threats into the game, using finite-state machines.</li>
-		<li>Developed collectable items and their condition/effects.</li>
-		<li>Designed new dungeons/levels through the in-house level editor.</li>
+		<li>Introduced Agile Development to two product teams, managing content release schedule for 10 engineers.</li>
+		<li>Directly responsible for development workflow for F2P SaaS product generating $3 million in sales, over 7,000 CCU and 1.2 million accounts.</li>
+		<li>Designed integrated in-game content partnerships, promoting social advertisement and reach.</li>
 		</ul>
 
 		<p><strong>Software Engineer, Grand Theft Minecart</strong><br>
 		<weak>Sept 2017 - Present</weak><br>
-		<weak>F2P Saas PC game server with over 800,000 accounts.</weak>
+		<weak>F2P SaaS PC game server with over 1.1 million accounts.</weak>
 		</p>
 		<ul>
-		<li>Optimized backend systems to store minimal data, increasing query times, resulting in less lag per tick.</li>
-		<li>Developed isolated custom event framework, allowing for different types of experiences per agile cycle.</li>
-		<li>Introduced statistical framework for tracking user behaviors, currencies, and actions to understand how players can player and/or exploit the game.</li>
+		<li>Reconstructed and optimized relation database systems to store minimal data, increasing data retrieval response time.</li>
+		<li>Developed event framework and seasonal in-game shops promoting traffic during holidays and weekends, servicing 1.1 million unique accounts and up to 1,200 CCU.</li>
+		<li>Introduced statistical framework for tracking user behaviors, currency trends, and actions to understand how players can play and/or exploit the game.</li>
+		<li>Constructed cross server player-to-player market system with mutexable locks that helped with economy inflation.</li>
 		</ul>
 
 		<p><strong>Software Engineer / Project Lead, Isles Softworks</strong><br>
@@ -72,8 +73,9 @@ description: Current Resume for Stephen Bahr
 
 		<h2>Skills</h2>
 		<ul>
-		<li><u>Languages</u>: Java (proficient), Python (proficient), C++ (intermediate)</li>
-		<li><u>Operating Systems</u>: CentOS, Mac OS X, Windows</li>
-		<li><u>Tools and Frameworks</u>: MySQL, Redis, Gradle, Artifactory, Jenkins, VCS (Git), JIRA</li>
+		<li><u>Languages</u>: Java / Python (proficient), C++ / Objective-C (intermediate)</li>
+		<li><u>Operating Systems</u>: CentOS, Ubuntu, Mac OS X, Windows</li>
+		<li><u>Game Engines</u>: Unity</li>
+		<li><u>Tools and Frameworks</u>: MySQL/MariaDB/MongoDB, Redis/RabbitMQ, Maven/Gradle, Artifactory/Nexus, Jenkins/CircleCI, VCS (Git), JIRA</li>
 		</ul>
 </div>
