- Updates main index to reflect portfolio and projects.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: About
 about: active
 resume: passive
 projects: passive
+portfolio: passive
 contact: passive
 description: Stephen Bahr is a Software Engineer from a small town in Ashland, OH
 ---
@@ -17,7 +18,7 @@ description: Stephen Bahr is a Software Engineer from a small town in Ashland, O
 	<p>I mainly specialize in backend computational systems, but have a obsession to create interesting games. My passion involves always being able to improve my technical capabilities, and absorb learning experiences from others. 
 	</p>
 	
-	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>, or if you like visual portfolios you can check out my <a href="/projects">projects page</a>.
+	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>, or if you like visual portfolios you can check out my <a href="/portfolio">portfolio page</a>. I also invite you to check out the projects I do in my free time on my <a href="/projects">projects page</a>!
 	</p>
 	</div>
 	<style type="text/css">
