- Updates projects/index.html.

--- a/projects/index.html
+++ b/projects/index.html
@@ -4,17 +4,139 @@ title: About
 about: passive
 resume: passive
 projects: active
+portfolio: passive
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in Ashland, OH
+description: Stephen Bahr is a Software Engineer from a small town in OH
 ---
 <!-- <div class="jumbotron"> -->
 <div class="projects">
 	<div class="overview">
-		<p>I thoroughly enjoy creating new software in my freetime, as it allows me to mess with various technologies in an always changing field. Below are some of my projects that I am currently working on, or have completed.</p>
+		<p>I thoroughly enjoy creating new software in my freetime, as it allows me to mess with various technologies in a volatile field. Below are some of my projects that I am working on, have completed, or failed, as failures are the greatest lessons.</p>
 		<br>
 		<p>Note: More projects can be found on my <a href="https://github.com/Unknowncmbk?tab=repositories">GitHub</a>.
 	</div>
 	<div class="project-a">
+		<h3>Island Clash Classic</h3>
+		Status: <font color="green">In Progress</font><br>
+		Length: <font color="green">May 2019 - Present</font><br>
+		<h4>Goal</h4>
+		Island Clash Classic is a revival of Island Clash, a project created by Isles Softworks (of which I had a major stake in), that is a blend of Age of Empires and Clash of Clans. Players can recruits others to their islands, and collect resources/raid other islands to build up their island to become the best.
+		<br>
+		This project composed of but not limited to:
+		- Java 8 and Python 2.7
+		- Artifactory
+		- GitHub (VCS)
+		- MariaDB / Redis
+
+		<h5>As Lead Engineer</h5>
+		<li>Oversee the help and productivty of six engineers working in their free time on this project.</li>
+		<li>Revert player facing features to classic mode, without reverting code base.</li>
+		<li>Relaunch of product featured 800 CCU after product has been closed for 2 years.</li>
+		<br>
+
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=xaSNNJwctKo">
+					<img src="/img/islandclash/ic_launch_logo.png" alt="IC Classic Launch Trailer" style="width:100%">
+						<div class="caption">
+						<p>Click to view IC Classic's Hype Trailer.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=18tbIP9kbTI">
+					<img src="/img/islandclash/ic_main_spawn.png" alt="IC Classic Trailer" style="width:100%">
+						<div class="caption">
+						<p>Click to view Island Clash Classic's Trailer.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=KEGeCsCt45Q">
+					<img src="/img/islandclash/ic_elven_skin_spotlight.png" alt="Elven Building Skins" style="width:100%">
+						<div class="caption">
+						<p>Click to view the Elven building skin spotlight.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=GdenF1y1qM0">
+					<img src="/img/islandclash/ic_futuristic_skin_spotlight.png" alt="Futuristic Building Skins" style="width:100%">
+						<div class="caption">
+						<p>Click to view the Futuristic building skin spotlight.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<h3>Grashers / JunkET</h3>
+		Status: <font color="red">Incomplete</font><br>
+		Length: <font color="red">Jan 2018 - Apr 2019</font><br>
+		<a href="http://www.grashers.com">Project Link</a>
+		<h4>Goal</h4>
+		Grashers, formerly known as Junk E.T., is a dungeon crawler style <a href="https://store.steampowered.com/app/670250/Grashers/">Steam game</a> that takes elements of Binding of Isaac, Legend of Zelda, and combines them with a need to collect all the junk in the universe. Absorb and convert trash to energy to travel to different planets and fight epic monsters and bosses in this randomly generated game!
+		<br>
+		This project composed of but not limited to:
+		- Java / LibGDX
+		- Blender
+		- GitHub (VCS)
+
+		<h5>My Involvement as Game Developer</h5>
+		- Add documentation and streamline various method calls.
+		- Create additional gameplay mechanics, including additional triggerable item effects.
+		- Design additonal stages using in-house editor.
+
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=lPN5QKLRxEI">
+					<img src="/img/grashers/login_menu.png" alt="Grashers 2019 Launch Trailer" style="width:100%">
+						<div class="caption">
+						<p>Click to view Grashers 2019 Trailer.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/img/grashers/spaceship.png">
+					<img src="/img/grashers/spaceship.png" alt="Main Player's Spaceship" style="width:100%">
+						<div class="caption">
+						<p>Protagonist's spaceship, useful for travel.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/img/grashers/travel_menu.png">
+					<img src="/img/grashers/travel_menu.png" alt="Travel to other planets" style="width:100%">
+						<div class="caption">
+						<p>Travel to other planets.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/img/grashers/world_trash.png">
+					<img src="/img/grashers/world_trash.png" alt="Collect trash from each planet" style="width:100%">
+						<div class="caption">
+						<p>Collect some junk!</p>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+
 		<h3>UnblockMe Generator</h3>
 		Status: <font color="green">Completed</font><br>
 		Length: <font color="green">May 2017 - July 2017</font><br>
