- Adds formatting to projects page.

--- a/projects/index.html
+++ b/projects/index.html
@@ -16,19 +16,24 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 		<p>Note: More projects can be found on my <a href="https://github.com/Unknowncmbk?tab=repositories">GitHub</a>.
 	</div>
 	<div class="project-a">
-		<h3>Island Clash Classic</h3>
+		<h2>Island Clash Classic</h2>
 		Status: <font color="green">In Progress</font><br>
 		Length: <font color="green">May 2019 - Present</font><br>
-		<h4>Goal</h4>
+		<br>
+		<h3>Goal</h3>
 		Island Clash Classic is a revival of Island Clash, a project created by Isles Softworks (of which I had a major stake in), that is a blend of Age of Empires and Clash of Clans. Players can recruits others to their islands, and collect resources/raid other islands to build up their island to become the best.
 		<br>
-		This project composed of but not limited to:
-		- Java 8 and Python 2.7
-		- Artifactory
-		- GitHub (VCS)
-		- MariaDB / Redis
+		<br>
 
-		<h5>As Lead Engineer</h5>
+		This project composed of but not limited to:
+		<li>Java 8 and Python 2.7</li>
+		<li>Artifactory</li>
+		<li>GitHub (VCS)</li>
+		<li>MariaDB / Redis</li>
+
+		<br>
+
+		<h3>As Lead Engineer</h3>
 		<li>Oversee the help and productivty of six engineers working in their free time on this project.</li>
 		<li>Revert player facing features to classic mode, without reverting code base.</li>
 		<li>Relaunch of product featured 800 CCU after product has been closed for 2 years.</li>
@@ -77,22 +82,29 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 			</div>
 		</div>
 
-		<h3>Grashers / JunkET</h3>
+		<h2>Grashers / JunkET</h2>
 		Status: <font color="red">Incomplete</font><br>
 		Length: <font color="red">Jan 2018 - Apr 2019</font><br>
 		<a href="http://www.grashers.com">Project Link</a>
-		<h4>Goal</h4>
-		Grashers, formerly known as Junk E.T., is a dungeon crawler style <a href="https://store.steampowered.com/app/670250/Grashers/">Steam game</a> that takes elements of Binding of Isaac, Legend of Zelda, and combines them with a need to collect all the junk in the universe. Absorb and convert trash to energy to travel to different planets and fight epic monsters and bosses in this randomly generated game!
 		<br>
-		This project composed of but not limited to:
-		- Java / LibGDX
-		- Blender
-		- GitHub (VCS)
+		<br>
+		<h3>Goal</h3>
+		Grashers, formerly known as Junk E.T., is a dungeon crawler style <a href="https://store.steampowered.com/app/670250/Grashers/">Steam game</a> that takes elements of Binding of Isaac, Legend of Zelda, and combines them with a need to collect all the junk in the universe. Absorb and convert trash to energy to travel to different planets and fight epic monsters and bosses in this randomly generated game!
 
-		<h5>My Involvement as Game Developer</h5>
-		- Add documentation and streamline various method calls.
-		- Create additional gameplay mechanics, including additional triggerable item effects.
-		- Design additonal stages using in-house editor.
+		<br>
+		<br>
+
+		This project composed of but not limited to:
+		<li>Java / LibGDX</li>
+		<li>Blender</li>
+		<li>GitHub (VCS)</li>
+
+		<br>
+
+		<h3>My Involvement as Game Developer</h3>
+		<li>- Add documentation and streamline various method calls.</li>
+		<li>- Create additional gameplay mechanics, including additional triggerable item effects.</li>
+		<li>- Design additonal stages using in-house editor.</li>
 
 		<div class="row">
 			<div class="col-md-4">
@@ -137,11 +149,13 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 			</div>
 		</div>
 
-		<h3>UnblockMe Generator</h3>
+		<h2>UnblockMe Generator</h2>
 		Status: <font color="green">Completed</font><br>
 		Length: <font color="green">May 2017 - July 2017</font><br>
 		<a href="https://github.com/Unknowncmbk/unblock-me-generator">Source Code</a>
-		<h4>Goal</h4>
+		<br>
+		<br>
+		<h3>Goal</h3>
 		Constraint satification problems have always been interesting to me, and some mobile puzzle games, like <a href="https://itunes.apple.com/us/app/unblock-me-classic-block-puzzle/id315019111?mt=8">UnblockMe</a>, must have some interesting generation algorithms. The complexity of these puzzles must be polynominal.
 		<br>
 
@@ -168,11 +182,13 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 			</div>
 		</div>
 
-		<h3>Epoch Time Tracker</h3>
+		<h2>Epoch Time Tracker</h2>
 		Status: <font color="green">Completed</font><br>
 		Length: <font color="green">January 2017 - March 2017</font><br>
 		<a href="https://github.com/Unknowncmbk/epoch-time-tracker">Source Code</a>
-		<h4>Goal</h4>
+		<br>
+		<br>
+		<h3>Goal</h3>
 		Startup companies need to keep their costs low, and a lot of time trackers out there do not have an easy to use clock in/clock out application with GitHub commit logging. This simple Slack integration allows companies to keep track of Engineers hours and allows them to see what commits were done every day.
 		<br>
 
@@ -199,11 +215,13 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 			</div>
 		</div>
 
-		<h3>Pokemon Go Finder</h3>
+		<h2>Pokemon Go Finder</h2>
 		Status: <font color="green">Completed</font><br>
 		Length: <font color="green">July 2016 - August 2016</font><br>
 		<a href="https://github.com/Unknowncmbk/Pokemon-Go-Locator-Server">Source Code</a>
-		<h4>Goal</h4>
+		<br>
+		<br>
+		<h3>Goal</h3>
 		<a href="https://en.wikipedia.org/wiki/Pokémon_Go">Pokemon Go</a>, the mobile application, was a huge hit in the summer of 2016. Niantic, the company that created it, exposed their API calls allowing anyone to query their location services, getting the location of all Pokemon within a specified radius. This project stores those API calls, in order to give an advantage to players by expanding their search radius.
 		<br>
 
