- Update website with more up-to-date info.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,9 +17,9 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 	<div class="portfolio-godcomplex">
 		<h2>GodComplex / Hylist Games</h2>
 		<b>Length: </b><font color="green">Jan 2019 - Present</font><br>
-		<b>Role: </b>Lead Software Engineer<br>
+		<b>Role: </b>Software Engineer Manager<br>
 		<h3>Goal</h3>
-		God Complex is a company that operates F2P SaaS video games. The company builds platforms on Minecraft, Hytale, and standalone games. God Complex owns Hylist Games, another game company that produces VeltPvP / Arcane Network.My direct involvement is with both companies as the Lead Software Engineer, overseeing weekly development lifecycles.
+		God Complex is a company that operates F2P SaaS video games. The company builds platforms on Minecraft, Hytale, Roblox, and standalone games. God Complex owns Hylist Games, another game company that produces VeltPvP / Arcane Network. My direct involvement is with both companies as the Lead Software Engineer / Engineering Manager, overseeing weekly development lifecycles for a team of over 15.
 		<br>
 		<br>
 
@@ -103,7 +103,7 @@ description: Stephen Bahr is a Software Engineer from a small town in OH
 	<div class="portfolio-isles">
 		<h2>Isles Softworks</h2>
 		<b>Length: </b><font color="green">June 2015 - Sept 2017</font><br>
-		<b>Role: </b>Software Engineer / Project Lead<br>
+		<b>Role: </b>Software Engineer Manager<br>
 		<h3>Goal</h3>
 		Isles Softworks was a company created from the formation of Island Clash, which is the first official product produced. The company expanded into handling multiple F2P SaaS products and expanded into PrisonMC network and Proper Dummies network. The company generated revenue from freemium services offered to players and partnered with popular influencers like PrestonPlayz, Woofless, AviatorGaming, JeromeASF, and others.
 		<br>
