--- a/resume/index.html
+++ b/resume/index.html
@@ -16,18 +16,18 @@ description: Current Resume for Stephen Bahr
 		</div>
 		
 		<h2>Experience</h2>
-		<p><strong>Lead Software Engineer, God Complex / Hylist Games</strong><br>
+		<p><strong>Software Engineer Manager, God Complex / Hylist Games</strong><br>
 		<weak>Jan 2019 - Present</weak><br>
 		<weak>Multiple F2P SaaS PC game server with over 1.2 million accounts</weak>
 		</p>
 		<ul>
-		<li>Introduced Agile Development to two product teams, managing content release schedule for 10 engineers.</li>
+		<li>Introduced Agile Development to two product teams, managing content release schedule for 10+ engineers, 15+ employees.</li>
 		<li>Directly responsible for development workflow for F2P SaaS product generating $3 million in sales, over 7,000 CCU and 1.2 million accounts.</li>
 		<li>Designed integrated in-game content partnerships, promoting social advertisement and reach.</li>
 		</ul>
 
 		<p><strong>Software Engineer, Grand Theft Minecart</strong><br>
-		<weak>Sept 2017 - Present</weak><br>
+		<weak>Sept 2017 - May 2020</weak><br>
 		<weak>F2P SaaS PC game server with over 1.1 million accounts.</weak>
 		</p>
 		<ul>
@@ -37,7 +37,7 @@ description: Current Resume for Stephen Bahr
 		<li>Constructed cross server player-to-player market system with mutexable locks that helped with economy inflation.</li>
 		</ul>
 
-		<p><strong>Software Engineer / Project Lead, Isles Softworks</strong><br>
+		<p><strong>Software Engineer Manager, Isles Softworks</strong><br>
 		<weak>June 2015 - Sept 2017</weak><br></p>
 		<ul>
 		<li>Lead multiple SaaS development teams through sprint life cycles, aligning content release schedules to bi-monthly.</li>
@@ -73,9 +73,9 @@ description: Current Resume for Stephen Bahr
 
 		<h2>Skills</h2>
 		<ul>
-		<li><u>Languages</u>: Java / Python (proficient), C++ / Objective-C (intermediate)</li>
+		<li><u>Languages</u>: Java / Python (proficient), C++ / Objective-C / Lua (intermediate)</li>
 		<li><u>Operating Systems</u>: CentOS, Ubuntu, Mac OS X, Windows</li>
-		<li><u>Game Engines</u>: Unity</li>
+		<li><u>Game Engines</u>: Unity / Roblox Studio</li>
 		<li><u>Tools and Frameworks</u>: MySQL/MariaDB/MongoDB, Redis/RabbitMQ, Maven/Gradle, Artifactory/Nexus, Jenkins/CircleCI, VCS (Git), JIRA</li>
 		</ul>
 </div>
