--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ resume: passive
 projects: passive
 portfolio: passive
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in Ashland, OH
+description: Stephen Bahr is a Software Engineer from a small town in Ohio
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
@@ -15,7 +15,7 @@ description: Stephen Bahr is a Software Engineer from a small town in Ashland, O
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p class="lead">Hi, I'm <span itemprop="name">Stephen</span> and I am a Software Engineer</p>
-	<p>I mainly specialize in backend computational systems, but have a obsession to create interesting games. My passion involves always being able to improve my technical capabilities, and absorb learning experiences from others. 
+	<p>I mainly specialize in backend computational systems, and leading software engineering teams. My inspiration for game design comes from RTS strategy games like Age of Empires II, Clash of Clans and dungeon crawlers like Binding of Isaac. My lifelong goal is to immortalize my family and friends in a video game with AI / audio recordings.
 	</p>
 	
 	<p>I invite you to check out any of my repositories over at <a href="https://github.com/Unknowncmbk">GitHub</a>, or if you like visual portfolios you can check out my <a href="/portfolio">portfolio page</a>. I also invite you to check out the projects I do in my free time on my <a href="/projects">projects page</a>!
