--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@ resume: passive
 projects: passive
 portfolio: active
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in OH
+description: Stephen Bahr is a Software Engineer from a small town in Ohio
 ---
 <!-- <div class="jumbotron"> -->
 <div class="portfolio">
