Update to add Branch.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ resume: passive
 projects: passive
 portfolio: passive
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in Ohio
+description: Stephen Bahr is a Software Engineering Manager from a small town in Ohio
 ---
 <!-- <div class="jumbotron"> -->
 <div class="row marketing">
@@ -14,7 +14,7 @@ description: Stephen Bahr is a Software Engineer from a small town in Ohio
 	<img  class="img-rounded avatar" alt="Stephen Bahr" src="img/stephen_200x.png">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Stephen</span> and I am a Software Engineer</p>
+	<p class="lead">Hi, I'm <span itemprop="name">Stephen</span> and I am a Software Engineering Manager.</p>
 	<p>I mainly specialize in backend computational systems, and leading software engineering teams. My inspiration for game design comes from RTS strategy games like Age of Empires II, Clash of Clans and dungeon crawlers like Binding of Isaac. My lifelong goal is to immortalize my family and friends in a video game with AI / audio recordings.
 	</p>
 	
