--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@ resume: passive
 projects: passive
 portfolio: active
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in Ohio
+description: Stephen Bahr is a Software Engineering Manager from a small town in Ohio
 ---
 <!-- <div class="jumbotron"> -->
 <div class="portfolio">
@@ -14,9 +14,58 @@ description: Stephen Bahr is a Software Engineer from a small town in Ohio
 		<p>The following are my portfolio highlights, summaries, and videos of influencers playing products I helped to create.</p>
 	</div>
 
+	<div class="portfolio-branch">
+		<h2>Branch Technologies</h2>
+		<b>Length: </b><font color="green">Mar 2021</font><br>
+		<b>Role: </b>Founding Engineer<br>
+		<h3>Goal</h3>
+		Branch Technologies is a company that operates the F2P social game <a href="https://branch.gg/">Branch</a> which combines proximity voice and sandbox building atmospheres. My direct involvement was a Full Stack role, where I would have to build backend systems like matchmaking, and front facing content like interactable objects. With the scale of Branch, and allowing users to own their own Branches, scalability and quick to development cycles were the key in making Branch succeed.
+		<br>
+		<br>
+
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=26G72vi0mco">
+					<img src="/img/branch/branch_milo.png" alt="Branch Intro" style="width:100%">
+						<div class="caption">
+						<p>Click here to watch a video on Branch.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/img/branch/branch_overview.png">
+					<img src="/img/branch/branch_overview.png" alt="Branch, the Game" style="width:100%">
+						<div class="caption">
+						<p>Team meetings about Branch, in Branch.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/img/branch/navmesh.png">
+					<img src="/img/branch/navmesh.png" alt="Branch Nevesh" style="width:100%">
+						<div class="caption">
+						<p>Nav Mesh debug for chairs and tables.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+
+		</div>
+
+		<br>
+		<br>
+	</div>
+
 	<div class="portfolio-godcomplex">
 		<h2>GodComplex / Hylist Games</h2>
-		<b>Length: </b><font color="green">Jan 2019 - Present</font><br>
+		<b>Length: </b><font color="green">Jan 2019 - Mar 2021</font><br>
 		<b>Role: </b>Software Engineer Manager<br>
 		<h3>Goal</h3>
 		God Complex is a company that operates F2P SaaS video games. The company builds platforms on Minecraft, Hytale, Roblox, and standalone games. God Complex owns Hylist Games, another game company that produces VeltPvP / Arcane Network. My direct involvement is with both companies as the Lead Software Engineer / Engineering Manager, overseeing weekly development lifecycles for a team of over 15.
@@ -38,9 +87,20 @@ description: Stephen Bahr is a Software Engineer from a small town in Ohio
 			<div class="col-md-4">
 				<div class="thumbnail">
 					<a href="/img/godcomplex/godcomplex_logo.png">
-					<img src="/img/godcomplex/godcomplex_logo.png" alt="VeltPvP Relaunch" style="width:100%">
+					<img src="/img/godcomplex/godcomplex_logo.png" alt="GodComplex Logo" style="width:100%">
 						<div class="caption">
 						<p>GodComplex Logo.</p>
+						</div>
+					</a>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="https://www.youtube.com/watch?v=hepFg_g22M0">
+					<img src="/img/godcomplex/veltpvp_logo.png" alt="Arcane Launch Trailer" style="width:100%">
+						<div class="caption">
+						<p>Click here to view a trailer for Arcane.</p>
 						</div>
 					</a>
 				</div>
