--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ resume: passive
 projects: active
 portfolio: passive
 contact: passive
-description: Stephen Bahr is a Software Engineer from a small town in Ohio
+description: Stephen Bahr is a Software Engineering Manager from a small town in Ohio
 ---
 <!-- <div class="jumbotron"> -->
 <div class="projects">
