--- a/resume/index.html
+++ b/resume/index.html
@@ -16,17 +16,29 @@ description: Current Resume for Stephen Bahr
 		</div>
 		
 		<h2>Experience</h2>
-		<p><strong>Software Engineer Manager, God Complex / Hylist Games</strong><br>
-		<weak>Jan 2019 - Present</weak><br>
+		<p><strong>Founding Engineer, Branch Technologies</strong><br>
+		<weak>Mar 2021 - Dec 2021</weak><br>
+		<weak>Cross-platform F2P social game with proximity voice and sandbox properties</weak>
+		</p>
+		<ul>
+		<li>Abstract Java game instance to handle infinite game type using AWS ECS.</li>
+		<li>Modify routing/authentication to account for 30k DAUs.</li>
+		<li>Create spatial elements like Navigation Meshes, Wang Tiles, Teleport Pads, and Throwable entities to Phaser/Java game.</li>
+		<li>Support client and server packets for stateful changes regarding multiplayer support.</li>
+		<li>Integrate matchmaking system with AWS GameLift route players to mini-games.</li>
+		</ul>
+
+		<p><strong>Software Engineering Manager, God Complex / Hylist Games</strong><br>
+		<weak>Jan 2019 - Mar 2021</weak><br>
 		<weak>Multiple F2P SaaS PC game server with over 1.2 million accounts</weak>
 		</p>
 		<ul>
-		<li>Introduced Agile Development to two product teams, managing content release schedule for 10+ engineers, 15+ employees.</li>
-		<li>Directly responsible for development workflow for F2P SaaS product generating $3 million in sales, over 7,000 CCU and 1.2 million accounts.</li>
+		<li>Introduced Agile Development to three product teams, managing bi-weekly content release schedule for 10+ engineers, 15+ employees.</li>
+		<li>Directly responsible for product/engineering workflow for F2P SaaS video game generating $3 million in sales, over 7,000 CCU and 1.2 million accounts.</li>
 		<li>Designed integrated in-game content partnerships, promoting social advertisement and reach.</li>
 		</ul>
 
-		<p><strong>Software Engineer, Grand Theft Minecart</strong><br>
+		<p><strong>Senior Software Engineer, Grand Theft Minecart</strong><br>
 		<weak>Sept 2017 - May 2020</weak><br>
 		<weak>F2P SaaS PC game server with over 1.1 million accounts.</weak>
 		</p>
@@ -34,16 +46,16 @@ description: Current Resume for Stephen Bahr
 		<li>Reconstructed and optimized relation database systems to store minimal data, increasing data retrieval response time.</li>
 		<li>Developed event framework and seasonal in-game shops promoting traffic during holidays and weekends, servicing 1.1 million unique accounts and up to 1,200 CCU.</li>
 		<li>Introduced statistical framework for tracking user behaviors, currency trends, and actions to understand how players can play and/or exploit the game.</li>
-		<li>Constructed cross server player-to-player market system with mutexable locks that helped with economy inflation.</li>
+		<li>Constructed cross server player-to-player market system with mutex locks that helped with economy inflation.</li>
 		</ul>
 
-		<p><strong>Software Engineer Manager, Isles Softworks</strong><br>
+		<p><strong>Software Engineering Manager, Isles Softworks</strong><br>
 		<weak>June 2015 - Sept 2017</weak><br></p>
 		<ul>
 		<li>Lead multiple SaaS development teams through sprint life cycles, aligning content release schedules to bi-monthly.</li>
-		<li>Responsible for patching live services with up to 2,200 CCU and over 400,000 accounts.</li>
+		<li>Responsible for patching live services with up to 2,200 CCU and over 400,000 accounts generating $300k in revenue.</li>
 		<li>Implemented dynamic queueing systems for products that have variable audience sizes.</li>
-		<li>Created a Python imaging system to manage server shards with custom load/unload handlings.</li>
+		<li>Created a Python imaging system to manage server shards with custom load/unload handling.</li>
 		<li>Engineered a time management/tracker, allowing engineers to observe their JIRA progress and GitHub contributions daily.</li>
 		</ul>
 
@@ -73,9 +85,9 @@ description: Current Resume for Stephen Bahr
 
 		<h2>Skills</h2>
 		<ul>
-		<li><u>Languages</u>: Java / Python (proficient), C++ / Objective-C / Lua (intermediate)</li>
+		<li><u>Languages</u>: Java / Python (proficient), Typescript / C++ / Objective-C / Lua (intermediate)</li>
 		<li><u>Operating Systems</u>: CentOS, Ubuntu, Mac OS X, Windows</li>
-		<li><u>Game Engines</u>: Unity / Roblox Studio</li>
-		<li><u>Tools and Frameworks</u>: MySQL/MariaDB/MongoDB, Redis/RabbitMQ, Maven/Gradle, Artifactory/Nexus, Jenkins/CircleCI, VCS (Git), JIRA</li>
+		<li><u>Game Engines</u>: Phaser / Unity / Roblox Studio</li>
+		<li><u>Tools and Frameworks</u>: AWS, MySQL/MongoDB, Redis/RabbitMQ/AWS SNS, Docker, AirTable, Maven/Gradle, Artifactory/Nexus, Jenkins/CircleCI, Git, JIRA/Asana</li>
 		</ul>
 </div>
