Fix improper length of Branch.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@ description: Stephen Bahr is a Software Engineering Manager from a small town in
 
 	<div class="portfolio-branch">
 		<h2>Branch Technologies</h2>
-		<b>Length: </b><font color="green">Mar 2021</font><br>
+		<b>Length: </b><font color="green">Mar 2021 - Dec 2021</font><br>
 		<b>Role: </b>Founding Engineer<br>
 		<h3>Goal</h3>
 		Branch Technologies is a company that operates the F2P social game <a href="https://branch.gg/">Branch</a> which combines proximity voice and sandbox building atmospheres. My direct involvement was a Full Stack role, where I would have to build backend systems like matchmaking, and front facing content like interactable objects. With the scale of Branch, and allowing users to own their own Branches, scalability and quick to development cycles were the key in making Branch succeed.
